--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			
 		<div id="first">
             <form action="" method="post">
-			<h1>welcome ERAD Staff work</h1>
+			<h1>welcome ERAD </h1>
                 <input type="text" id="loginusername" placeholder="Username" /><br>
                 <input type="password" id="loginpassword" placeholder="Password" /><br>
                 <input type="button" id="login" value="Sign In" />
